--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
-						<li class="nav-item"><button onclick="dayNightToggle()" style="align: right;">Toggle dark mode</button><li>
+						<li class="nav-item"><button onclick="dayNightToggle()" style="align: right;">Toggle dark mode</button></li>
 					</ul>
 				</div> 
 			</div>
