--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--================Header Menu Area =================-->
         <header class="header_area" id="Home">
             <div class="main_menu" id="mainNav">
-            	<nav class="navbar navbar-expand-lg navbar-light" style="color: inherit; background: inherit">
+            	<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container box_1620">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				
