--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         								<li><h4>1</h4></li>
 									<li></li>
         								<li data-filter=".graduate_thesis">
-										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; transform: rotate(270deg);">
+										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; padding: 0px;">
 											Graduate Thesis
 										</a>
 									</li>
@@ -117,7 +117,7 @@
         								<li><h4>1</h4></li>
 									<li></li>
         								<li data-filter=".thesis">
-										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; transform: rotate(270deg);">
+										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;  padding: 0px;">
 											Undergrade Thesis
 										</a>
 									</li>
@@ -129,7 +129,7 @@
         								<li><h4>4</h4></li>
 									<li></li>
         								<li data-filter=".projects">
-										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; transform: rotate(270deg);">
+										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;  padding: 0px;">
 											Undergrade Projects
 										</a>
 									</li>
@@ -141,7 +141,7 @@
         								<li><h4>2</h4></li>
 									<li></li>
         								<li data-filter=".publications">
-										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; transform: rotate(270deg);">
+										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;  padding: 0px;">
 											Total Publications
 										</a>
 									</li>
