--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         					<h4>About Myself</h4>
         					<p style="text-align: justify color: black">I was born in a small village in <a href="#" style="text-decoration: none; color: black;">Cumilla</a> (A renown city of <a href="#" style="text-decoration: none; color: black;">Bangladesh</a>). Though I was born in a small village, my dream is not small at all. Projecting to my dream after passing secondary and higher secondary I graduated with honors in Computer Science & Engineering from <a href="#" style="text-decoration: none; color: black;">Rajshahi University of Engineering & Technology (RUET)</a> - a reputed university in my country.</p>
 							<div class="row projects-filter" style="text-align: center;">
-							<div class="col-lg-3 col-md-3">
+							<div class="col-lg-3 col-md-3" style= "padding: 0px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
         								<li><h4>1</h4></li>
@@ -111,7 +111,7 @@
 									</li>
         							</ul>
         						</div>
-        						<div class="col-lg-3 col-md-3">
+        						<div class="col-lg-3 col-md-3" style= "padding: 0px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
         								<li><h4>1</h4></li>
@@ -123,7 +123,7 @@
 									</li>
         							</ul>
         						</div>
-        						<div class="col-lg-3 col-md-3">
+        						<div class="col-lg-3 col-md-3" style= "padding: 0px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-code"></i></li>
         								<li><h4>4</h4></li>
@@ -135,7 +135,7 @@
 									</li>
         							</ul>
         						</div>
-        						<div class="col-lg-3 col-md-3">
+        						<div class="col-lg-3 col-md-3" style= "padding: 0px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-book"></i></li>
         								<li><h4>2</h4></li>
