--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p style="text-align: justify;">I was born in a small village in <a href="#" style="text-decoration: none;">Cumilla</a> (A renown city of <a href="#" style="text-decoration: none;">Bangladesh</a>). Though I was born in a small village, my dream is not small at all. Projecting to my dream after passing secondary and higher secondary I graduated with honors in Computer Science & Engineering from <a href="#" style="text-decoration: none;">Rajshahi University of Engineering & Technology (RUET)</a> - a reputed university in my country.</p>
+        					<p style="text-align: justify;">I was born in a small village in Cumilla (A renowned city in Bangladesh). Though I was born in a small village, my dream is not small at all. Projecting to my dream after passing secondary and higher secondary I graduated with honors in Computer Science & Engineering from Rajshahi University of Engineering & Technology (RUET). Also, I have done my M.Sc. degree in Computer Science from Jahangirnagar University (JU). Currently, I'm a graduate student (M.Sc.) at Bangladesh University of Engineering and Technology (BUET) and working as a lecturer at BGMEA University of Fashion and Technology (BUFT).</p>
 							<div class="row projects-filter" style="text-align: center;">
 							<div class="col-lg-3 col-md-3" style= "padding: 0px;">
         							<ul class="wel_item filter list">
