--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         	<div class="container">
         		<div class="row welcome_inner justify-content-center">
         			<div class="col-lg-6">
-        				<div class="welcome_text">
+        				<div class="welcome_text" style="max-width:100%">
         					<h4>About Myself</h4>
         					<p style="text-align: justify;">I was born in a small village in Cumilla (A renowned city in Bangladesh). Though I was born in a small village, my dream is not small at all. Projecting to my dream after passing secondary and higher secondary I graduated with honors in Computer Science & Engineering from Rajshahi University of Engineering & Technology (RUET). Also, I have done my M.Sc. degree in Computer Science from Jahangirnagar University (JU). Currently, I'm a graduate student (M.Sc.) at Bangladesh University of Engineering and Technology (BUET) and working as a lecturer at BGMEA University of Fashion and Technology (BUFT).</p>
 							<div class="row projects-filter" style="text-align: center;">
