--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
         	<div class="container">
         		<div class="row welcome_inner justify-content-center">
         			<div class="col-lg-6">
-        				<div class="welcome_text" style="max-width:100% !important;">
+        				<div class="welcome_text">
         					<h4>About Myself</h4>
         					<p style="text-align: justify;">I was born in a small village in Cumilla (A renowned city in Bangladesh). Though I was born in a small village, my dream is not small at all. Projecting to my dream after passing secondary and higher secondary I graduated with honors in Computer Science & Engineering from Rajshahi University of Engineering & Technology (RUET). Also, I have done my M.Sc. degree in Computer Science from Jahangirnagar University (JU). Currently, I'm a graduate student (M.Sc.) at Bangladesh University of Engineering and Technology (BUET) and working as a lecturer at BGMEA University of Fashion and Technology (BUFT).</p>
 							<div class="row projects-filter" style="text-align: center;">
-							<div class="col-lg-3 col-md-3" style= "padding: 0px;">
+							<div class="col-lg-3 col-md-3 col-sm-10" style= "padding: 1px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
         								<li><h4>1</h4></li>
@@ -111,7 +111,7 @@
 									</li>
         							</ul>
         						</div>
-        						<div class="col-lg-3 col-md-3" style= "padding: 0px;">
+        						<div class="col-lg-3 col-md-3 col-sm-10" style= "padding: 1px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
         								<li><h4>1</h4></li>
@@ -123,7 +123,7 @@
 									</li>
         							</ul>
         						</div>
-        						<div class="col-lg-3 col-md-3" style= "padding: 0px;">
+        						<div class="col-lg-3 col-md-3 col-sm-10" style= "padding: 1px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-code"></i></li>
         								<li><h4>4</h4></li>
@@ -135,7 +135,7 @@
 									</li>
         							</ul>
         						</div>
-        						<div class="col-lg-3 col-md-3" style= "padding: 0px;">
+        						<div class="col-lg-3 col-md-3 col-sm-10" style= "padding: 1px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-book"></i></li>
         								<li><h4>2</h4></li>
