--- a/index.html
+++ b/index.html
@@ -811,13 +811,13 @@
         	<div class="container">
         		<div class="row footer_inner p_20">
         			<div class="col-lg-8 col-sm-6">
-        				<aside class="f_widget ab_widget">
+        				<aside class="f_title ab_widget">
         					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved by <a href="https://github.com/jahid-jabed" target="_blank">Md. Jahidul Islam</a></p>
 						</aside>
         			</div>
         			
         			<div class="col-lg-4">
-        				<aside class="f_widget social_widget">
+        				<aside class="f_title social_widget">
 							<ul class="list text-right">
         						<li><a href="https://www.facebook.com/jahid.jabed" target="_blank"><i class="fa fa-facebook"></i></a></li>
         						<li><a href="https://github.com/jahid-jabed" target="_blank"><i class="fa fa-github"></i></a></li>
