--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="vendors/animate-css/animate.css">
         <link rel="stylesheet" href="vendors/flaticon/flaticon.css">
         <!-- main css -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style_updated.css">
         <link rel="stylesheet" href="css/responsive.css">
     </head>
     <body>
