--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
 					</ul>
-				</div> 
+				</div>
+				<button onclick="dayNightToggle()">Toggle dark mode</button>
 			</div>
             	</nav>
             </div>
