--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
 					</ul>
 				</div>
-				<button class="navbar-brand right" onclick="dayNightToggle()">Toggle dark mode</button>
+				<button class="navbar-brand pull-right" onclick="dayNightToggle()">Toggle dark mode</button>
 			</div>
             	</nav>
             </div>
