--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
+						<li class="nav-item"><a class="nav-link" onclick="dayNightToggle()">Toggle dark mode</a></li>
 					</ul>
 				</div>
-				<button style="float: right;" onclick="dayNightToggle()">Toggle dark mode</button>
 			</div>
             	</nav>
             </div>
