--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
-						<li class="nav-item"><button class="nav-link" onclick="dayNightToggle()">Toggle dark mode</button></li>
+						<li class="nav-item"><button class="nav-link" onclick="dayNightToggle()">&emsp;&emsp;</button></li>
 					</ul>
 				</div>
 			</div>
