--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
+                                <button onclick="dayNightToggle()">&emsp;&emsp;</button>
+
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse offset projects-filter" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu_nav ml-auto filter">
@@ -52,7 +54,7 @@
 							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
-						<li class="nav-item"><button class="nav-link" onclick="dayNightToggle()">&emsp;&emsp;</button></li>
+						
 					</ul>
 				</div>
 			</div>
