--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <header class="header_area" id="Home">
             <div class="main_menu" id="mainNav">
             	<nav class="navbar navbar-expand-lg navbar-light">
-                        <button onclick="dayNightToggle()">&emsp;&emsp;</button>
+                        
 			<div class="container box_1620">
+<button class="dark_btn" onclick="dayNightToggle()">&emsp;&emsp;</button>
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<a class="navbar-brand logo_h" href="index.html">MD. JAHIDUL ISLAM</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
