--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
                         
 			<div class="container box_1620">
-<button class="dark_btn" onclick="dayNightToggle()">&emsp;&emsp;</button>
+				<button class="dark_btn" onclick="dayNightToggle()">&emsp;&emsp;</button>
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<a class="navbar-brand logo_h" href="index.html">MD. JAHIDUL ISLAM</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,7 +83,7 @@
 							<h3>Hello, I'm</h3>
 							<h2>Md. Jahidul Islam</h2>
 							<h5>Lecturer, Department of Engineering</h5>
-							<h5><a href="http://buft.edu.bd/" target="_blank" style="text-decoration: none; color: black;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
+							<h5><a href="http://buft.edu.bd/" target="_blank" style="text-decoration: none;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
 							<!--a class="banner_btn" href="https://drive.google.com/open?id=1AXZlkn1xlxvfyEDL7EsATH_8Aec2D3cp" target="_blank">Download CV</a-->
 						</div>
 					</div>
@@ -159,43 +159,43 @@
         					<h3><br><br>Tools Expertness</h3>
         					<div class="skill_main">
 							<div class="skill_item">
-								<h4 class="text-left"><b style="color: black;">Teaching Skills:</b> Teaching and Academic Responsibilities 
-								(<span class="counter" style="color: black;">3</span> Years +).</h4>
+								<h4 class="text-left"><b">Teaching Skills:</b> Teaching and Academic Responsibilities 
+								(<span class="counter">3</span> Years +).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow=33 aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4 class="text-left"><b style="color: black;">Development Skills:</b> Web and Android Software Development 
-								(<span class="counter" style="color: black;">45</span>%).</h4>
+								<h4 class="text-left"><b>Development Skills:</b> Web and Android Software Development 
+								(<span class="counter">45</span>%).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4 class="text-left"><b style="color: black;">Programming Languages:</b> C, C++, Java, Python, PHP, R 
-								(<span class="counter" style="color: black;">65</span>%).</h4>
+								<h4 class="text-left"><b>Programming Languages:</b> C, C++, Java, Python, PHP, R 
+								(<span class="counter">65</span>%).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4 class="text-left"><b style="color: black;">Scripting Languages:</b> JavaScript, Angular JS, Python, PHP, MATLAB 
-								(<span class="counter" style="color: black;">60</span>%).</h4>
+								<h4 class="text-left"><b>Scripting Languages:</b> JavaScript, Angular JS, Python, PHP, MATLAB 
+								(<span class="counter">60</span>%).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4 class="text-left"><b style="color: black;">Tools/Frameworks:</b> NetBeans, Eclipse, Android-Studio, Laravel 
-								(<span class="counter" style="color: black;">85</span>%).</h4>
+								<h4 class="text-left"><b>Tools/Frameworks:</b> NetBeans, Eclipse, Android-Studio, Laravel 
+								(<span class="counter">85</span>%).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4 class="text-left"><b style="color: black;">Others:</b> Socket Programming, CISCO Networking 
-								(<span class="counter" style="color: black;">25</span>%).</h4>
+								<h4 class="text-left"><b>Others:</b> Socket Programming, CISCO Networking 
+								(<span class="counter">25</span>%).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
@@ -228,73 +228,73 @@
         				<div class="feature_item">
         					<i class="flaticon-briefcase"></i>
         					<h4>Lecturer</h4>
-						<p style="color: black;"><b style="color: black;">Engineering</b></p>
-						<p style="color: black;"><b style="color: black;">BGMEA University of Fashion and Technology (BUFT)</b></p>
-						<p style="color: black;"><b style="color: black;">Duration:</b> Mar, 2020 to Present</p>
+						<p><b>Engineering</b></p>
+						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
+						<p><b>Duration:</b> Mar, 2020 to Present</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 experiences">
         				<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer</h4>
-						<p style="color: black;"><b style="color: black;">Computer Science & Engineering</b></p>
-						<p style="color: black;"><b style="color: black;">Prime University</b></p>
-						<p style="color: black;"><b style="color: black;">Duration:</b> Feb, 2019 to Mar, 2020</p>
+						<p><b>Computer Science & Engineering</b></p>
+						<p><b>Prime University</b></p>
+						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 experiences">
         				<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer (Adjunct)</h4>
-						<p style="color: black;"><b style="color: black;">Engineering</b></p>
-						<p style="color: black;"><b style="color: black;">BGMEA University of Fashion and Technology (BUFT)</b></p>
-						<p style="color: black;"><b style="color: black;">Duration:</b> Sep, 2019 to Jan, 2020</p>
+						<p><b>Engineering</b></p>
+						<p><b>BGMEA University of Fashion and Technology (BUFT)</b></p>
+						<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
         				</div>
         			</div>
 				<div class="col-lg-4 col-md-4 education">
         				<div class="feature_item">
         					<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
-						<p style="color: black;"><b style="color: black;">Bangladesh University of Engineering and Technology</b></p>
+						<p><b>Bangladesh University of Engineering and Technology</b></p>
 						<p></p>
-						<p style="color: black;"><b style="color: black;"></b>Computer Science and Engineering</p>
-						<p style="color: black;"><b style="color: black;">CGPA:</b> N/A</p>
-						<p style="color: black;"><b style="color: black;">Position:</b> N/A</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> Ongoing</p>
+						<p><b></b>Computer Science and Engineering</p>
+						<p><b>CGPA:</b> N/A</p>
+						<p><b>Position:</b> N/A</p>
+						<p><b>Passing Year:</b> Ongoing</p>
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 education">
         				<div class="feature_item">
 						<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
-						<p style="color: black;"><b style="color: black;">Jahangirnagar University</b></p>
+						<p><b>Jahangirnagar University</b></p>
 						<p></p>
-						<p style="color: black;"><b style="color: black;"></b>Computer Science</p>
-						<p style="color: black;"><b style="color: black;">CGPA:</b> 3.95</p>
-						<p style="color: black;"><b style="color: black;">Position:</b> 1st</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2020</p>
+						<p><b></b>Computer Science</p>
+						<p><b>CGPA:</b> 3.95</p>
+						<p><b>Position:</b> 1st</p>
+						<p><b>Passing Year:</b> 2020</p>
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 education">
         				<div class="feature_item">
 						<i class="flaticon-professor"></i>
         					<h4>B.Sc. Engg.</h4>
-						<p style="color: black;"><b style="color: black;">Rajshahi University of Engineering & Technology</b></p>
+						<p><b>Rajshahi University of Engineering & Technology</b></p>
 						<p></p>
-						<p style="color: black;"><b style="color: black;"></b>Computer Science & Engineering</p>
-						<p style="color: black;"><b style="color: black;">CGPA:</b> 3.79 out of 4.00</p>
-						<p style="color: black;"><b style="color: black;">Position:</b> 8th out of 106</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2018</p>
+						<p><b></b>Computer Science & Engineering</p>
+						<p><b>CGPA:</b> 3.79 out of 4.00</p>
+						<p><b>Position:</b> 8th out of 106</p>
+						<p><b>Passing Year:</b> 2018</p>
         				</div>
 				</div>
 				<div class="col-lg-4 col-md-4 education">
         				<div class="feature_item">
 						<i class="flaticon-school"></i>
-						<p style="color: black;"><b style="color: black;">Ispahani Public School & College</b></p>
+						<p><b>Ispahani Public School & College</b></p>
 						<p></p>
-						<p style="color: black;"><b style="color: black;">Group:</b> Science</p>
-						<p style="color: black;"><b style="color: black;">GPA:</b> 5.00 out of 5.00</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2013</p>
+						<p><b>Group:</b> Science</p>
+						<p><b>GPA:</b> 5.00 out of 5.00</p>
+						<p><b>Passing Year:</b> 2013</p>
 
         				</div>
 				</div>
@@ -302,11 +302,11 @@
         				<div class="feature_item">
 						<i class="flaticon-student"></i>
         					<h4>SSC</h4>
-						<p style="color: black;"><b style="color: black;">Gongamondal Raj Institution</b></p>
+						<p><b>Gongamondal Raj Institution</b></p>
 						<p></p>
-						<p style="color: black;"><b style="color: black;">Group:</b> Science</p>
-						<p style="color: black;"><b style="color: black;">GPA:</b> 5.00 out of 5.00</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2011</p>
+						<p><b>Group:</b> Science</p>
+						<p><b>GPA:</b> 5.00 out of 5.00</p>
+						<p><b>Passing Year:</b> 2011</p>
         				</div>
         			</div>
         		</div>
@@ -654,7 +654,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-									<a href="https://www.researchgate.net/profile/Md_Jamil_Ur_Rahman" target="_blank"><b style="color: black; font-size: 28px;">Md. Jamil-Ur Rahman</b></a>
+									<a href="https://www.researchgate.net/profile/Md_Jamil_Ur_Rahman" target="_blank"><b style="font-size: 28px;">Md. Jamil-Ur Rahman</b></a>
         							<a href="https://www.ualberta.ca/" target="_blank"><p>M.Sc. Student, University of Alberta</p></a>
         						</div>
         					</div>
@@ -667,7 +667,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-									<a href="https://www.researchgate.net/profile/Julia_Rahman" target="_blank"><b style="color: black; font-size: 28px;">Julia Rahman</b></a>
+									<a href="https://www.researchgate.net/profile/Julia_Rahman" target="_blank"><b style="font-size: 28px;">Julia Rahman</b></a>
         							<a href="http://www.ruet.ac.bd/" target="_blank"><p>Assistant Professor, Rajshahi University of Engineering & Technology</p></a>
         						</div>
         					</div>
@@ -680,7 +680,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-									<a href="https://www.researchgate.net/profile/Md_Khaled_Ben_Islam" target="_blank"><b style="color: black; font-size: 28px;">Md Khaled Ben Islam</b></a>
+									<a href="https://www.researchgate.net/profile/Md_Khaled_Ben_Islam" target="_blank"><b style="font-size: 28px;">Md Khaled Ben Islam</b></a>
         							<a href="https://www.pust.ac.bd/" target="_blank"><p>Assistant Professor, Pabna University of Science & Technology</p></a>
         						</div>
         					</div>
@@ -706,7 +706,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-        							<a href="#" target="_blank"><b style="color: black;">Data or Specimens Only Research,</b> Dec 2017 – Present, License 25514623, as MIT Affiliates.</a>
+        							<a href="#" target="_blank"><b>Data or Specimens Only Research,</b> Dec 2017 – Present, License 25514623, as MIT Affiliates.</a>
         						</div>
         					</div>
         				</div>
@@ -718,7 +718,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-        							<a href="#" target="_blank"><b style="color: black;">Neural Networks and Deep Learning,</b> by deeplearning.ai on Coursera, earned at Aug 16, 2018.</a>
+        							<a href="#" target="_blank"><b>Neural Networks and Deep Learning,</b> by deeplearning.ai on Coursera, earned at Aug 16, 2018.</a>
         						</div>
         					</div>
         				</div>
@@ -730,7 +730,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-        							<a href="#" target="_blank"><b style="color: black;">Introduction to Statistics, by Bioinformatics Institute on Stepik,</b> earned at Aug 2018.</a>
+        							<a href="#" target="_blank"><b>Introduction to Statistics, by Bioinformatics Institute on Stepik,</b> earned at Aug 2018.</a>
         						</div>
         					</div>
         				</div>
@@ -742,7 +742,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-        							<a href="#" target="_blank"><b style="color: black;">Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization,</b> by deeplearning.ai on Coursera, earned at Sep 06, 2018.</a>
+        							<a href="#" target="_blank"><b>Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization,</b> by deeplearning.ai on Coursera, earned at Sep 06, 2018.</a>
         						</div>
         					</div>
         				</div>
@@ -754,7 +754,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-        							<a href="#" target="_blank"><b style="color: black;">Structuring Machine Learning Projects,</b> by deeplearning.ai on Coursera, earned at Sep 30, 2018.</a>
+        							<a href="#" target="_blank"><b>Structuring Machine Learning Projects,</b> by deeplearning.ai on Coursera, earned at Sep 30, 2018.</a>
         						</div>
         					</div>
         				</div>
@@ -766,7 +766,7 @@
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
-        							<a href="#" target="_blank"><b style="color: black;">Front-End Web UI Frameworks and Tools: Bootstrap 4,</b> by The Hong Kong University of Science and Technology on Coursera, earned at Nov 5, 2018.</a>
+        							<a href="#" target="_blank"><b>Front-End Web UI Frameworks and Tools: Bootstrap 4,</b> by The Hong Kong University of Science and Technology on Coursera, earned at Nov 5, 2018.</a>
         						</div>
         					</div>
         				</div>
