--- a/index.html
+++ b/index.html
@@ -779,6 +779,9 @@
 		<!--================Contact Area =================-->
         <section class="contact_area p_120" id="Contact">
             <div class="container">
+		<div class="main_title">
+        		<h2>Contact Information</h2>
+        	</div>
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="contact_info">
