--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 				</ul>
 			</div>
 				
-        		<div class="projects_inner row justify-content-center">
+        		<div class="projects_inner row">
 				<div class="col-lg-4 col-md-4 experiences">
         				<div class="feature_item">
         					<i class="flaticon-briefcase"></i>
@@ -333,7 +333,7 @@
 					</ul>
 				</div>
 					
-				<div class="projects_inner row justify-content-center">
+				<div class="projects_inner row">
 					<div class="col-lg-3 col-sm-4 research graduate_thesis">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
@@ -438,7 +438,7 @@
         			<h2>Teaching Areas</h2>
         			<p>I taught or currently teach the following courses.</p>
         		</div>
-        		<div class="row latest_blog_inner justify-content-center">
+        		<div class="row latest_blog_inner">
         			<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
@@ -646,7 +646,7 @@
         			<h2>My Team</h2>
         			<p>Following peoples are working with me.</p>
         		</div>
-        		<div class="row latest_blog_inner justify-content-center" style="text-align: center;">
+        		<div class="row latest_blog_inner" style="text-align: center;">
         			<div class="col-lg-4">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
@@ -698,7 +698,7 @@
         			<h2>Certificates</h2>
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
-        		<div class="row latest_blog_inner justify-content-center" style="text-align: center;">
+        		<div class="row latest_blog_inner" style="text-align: center;">
         			<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
