--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 					<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.png" alt="">
+        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -559,7 +559,7 @@
 					<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.png" alt="">
+        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -572,7 +572,7 @@
 					<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.png" alt="">
+        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -585,7 +585,7 @@
 					<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.png" alt="">
+        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -598,7 +598,7 @@
 					<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.png" alt="">
+        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -611,7 +611,7 @@
 					<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.png" alt="">
+        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -624,7 +624,7 @@
 					<div class="col-lg-2">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.png" alt="">
+        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
