--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 				<div class="projects_inner row">
 					<div class="col-lg-3 col-sm-4 research graduate_thesis">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
+							<img class="img-fluid" src="img/projects/project_default.svg" alt="">
 							<div class="projects_text">
 								<a href="#" target="_blank"><h4>Study on CNN based Transfer Learning in Image Classification</h4></a>
 								<p>Graduate Thesis</p>
