--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 					
 					<div class="col-lg-3 col-sm-4 projects other_projects">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
+							<img class="img-fluid" src="img/projects/projects-1.png" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/Java_IDGenerator" target="_blank"><h4>Student ID Card Genarator</h4></a>
 								<p>Undergrade Project (Java)</p>
