--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<div class="col-lg-6">
 						<div class="home_left_img">
 							<div class="banner_content">
-								<img src="img/banner/Md Jahidul Islam - BB.png" alt="">
+								<img src="img/banner/MyPhoto.svg" alt="">
 							</div>
 
 						</div>
