--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 				</div>
 					
 				<div class="projects_inner row">
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 research graduate_thesis">
+					<div class="col-lg-3 col-md-4 col-sm-6 research graduate_thesis">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
 							<div class="projects_text">
@@ -344,7 +344,7 @@
 						</div>
 					</div>
 					
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 projects other_projects">
+					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
 							<div class="projects_text">
@@ -353,7 +353,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 projects other_projects">
+					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
 							<div class="projects_text">
@@ -362,7 +362,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 projects other_projects">
+					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-3.jpg" alt="">
 							<div class="projects_text">
@@ -371,7 +371,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 other_projects">
+					<div class="col-lg-3 col-md-4 col-sm-6 other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-4.jpg" alt="">
 							<div class="projects_text">
@@ -380,7 +380,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 thesis research publications">
+					<div class="col-lg-3 col-md-4 col-sm-6 thesis research publications">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
 							<div class="projects_text">
@@ -389,7 +389,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 publications research">
+					<div class="col-lg-3 col-md-4 col-sm-6 publications research">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-6.jpg" alt="">
 							<div class="projects_text">
@@ -398,7 +398,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 other_projects">
+					<div class="col-lg-3 col-md-4 col-sm-6 other_projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
 							<div class="projects_text">
@@ -407,7 +407,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 other_Projects">
+					<div class="col-lg-3 col-md-4 col-sm-6 other_Projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-8.jpg" alt="">
 							<div class="projects_text">
@@ -416,7 +416,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 col-6 other_Projects">
+					<div class="col-lg-3 col-md-4 col-sm-6 other_Projects">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-9.jpg" alt="">
 							<div class="projects_text">
@@ -829,7 +829,7 @@
         						<li><a href="https://www.facebook.com/jahid.jabed" target="_blank"><i class="fa fa-facebook"></i></a></li>
         						<li><a href="https://github.com/jahid-jabed" target="_blank"><i class="fa fa-github"></i></a></li>
         						<li><a href="https://www.linkedin.com/in/jahid-jabed/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                    					<li><a href="#"><i class=fa fa-skype"><\i><\a><\li>
+                    					<li><a href="#"><i class=fa fa-skype"></i></a></li>
         					</ul>
         				</aside>
         			</div>
