--- a/index.html
+++ b/index.html
@@ -817,19 +817,19 @@
         <footer class="footer_area">
         	<div class="container">
         		<div class="row footer_inner p_20">
-        			<div class="col-lg-8 col-md-8 col-sm-8 col-10">
+        			<div class="col-lg-8 col-md-8 col-sm-8">
         				<aside class="f_title ab_widget">
         					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved by <a href="https://github.com/jahid-jabed" target="_blank">Md. Jahidul Islam</a></p>
 						</aside>
         			</div>
         			
-        			<div class="col-lg-4 col-md-4 col-sm-4 col-2">
+        			<div class="col-lg-4 col-md-4 col-sm-4">
         				<aside class="f_title social_widget">
 							<ul class="list text-right">
         						<li><a href="https://www.facebook.com/jahid.jabed" target="_blank"><i class="fa fa-facebook"></i></a></li>
         						<li><a href="https://github.com/jahid-jabed" target="_blank"><i class="fa fa-github"></i></a></li>
         						<li><a href="https://www.linkedin.com/in/jahid-jabed/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                    					<li><a href="#"><i class=fa fa-skype"></i></a></li>
+                    					<li><a href="#"><i class="fa fa-skype"></i></a></li>
         					</ul>
         				</aside>
         			</div>
