--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 			</div>
 				
         		<div class="projects_inner row">
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
-        				<div class="feature_item">
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
+        				<div class="feature_item slides_theme">
         					<i class="flaticon-briefcase"></i>
         					<h4>Lecturer</h4>
 						<p><b>Engineering</b></p>
@@ -233,8 +233,8 @@
 						<p><b>Duration:</b> Mar, 2020 to Present</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
-        				<div class="feature_item">
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
+        				<div class="feature_item slides_theme">
 						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer</h4>
 						<p><b>Computer Science & Engineering</b></p>
@@ -242,8 +242,8 @@
 						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences">
-        				<div class="feature_item">
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
+        				<div class="feature_item slides_theme">
 						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer (Adjunct)</h4>
 						<p><b>Engineering</b></p>
@@ -251,8 +251,8 @@
 						<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
         				</div>
         			</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
-        				<div class="feature_item">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
+        				<div class="feature_item slides_theme">
         					<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
 						<p><b>Bangladesh University of Engineering and Technology</b></p>
@@ -263,8 +263,8 @@
 						<p><b>Passing Year:</b> Ongoing</p>
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
-        				<div class="feature_item">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
+        				<div class="feature_item slides_theme">
 						<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
 						<p><b>Jahangirnagar University</b></p>
@@ -275,8 +275,8 @@
 						<p><b>Passing Year:</b> 2020</p>
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
-        				<div class="feature_item">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
+        				<div class="feature_item slides_theme">
 						<i class="flaticon-professor"></i>
         					<h4>B.Sc. Engg.</h4>
 						<p><b>Rajshahi University of Engineering & Technology</b></p>
@@ -287,8 +287,8 @@
 						<p><b>Passing Year:</b> 2018</p>
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
-        				<div class="feature_item">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
+        				<div class="feature_item slides_theme">
 						<i class="flaticon-school"></i>
 						<p><b>Ispahani Public School & College</b></p>
 						<p></p>
@@ -298,8 +298,8 @@
 
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education">
-        				<div class="feature_item">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
+        				<div class="feature_item slides_theme">
 						<i class="flaticon-student"></i>
         					<h4>SSC</h4>
 						<p><b>Gongamondal Raj Institution</b></p>
