--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 				</ul>
 			</div>
 				
-        		<div class="projects_inner row slider_theme">
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences slides_theme">
+        		<div class="projects_inner row">
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
         				<div class="feature_item">
         					<i class="flaticon-briefcase"></i>
         					<h4>Lecturer</h4>
@@ -233,7 +233,7 @@
 						<p><b>Duration:</b> Mar, 2020 to Present</p>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences slides_theme">
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
         				<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer</h4>
@@ -242,7 +242,7 @@
 						<p><b>Duration:</b> Feb, 2019 to Mar, 2020</p>
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 experiences slides_theme">
+				<div class="col-lg-4 col-md-4 col-sm-6 experiences slider_theme">
         				<div class="feature_item">
 						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer (Adjunct)</h4>
@@ -251,7 +251,7 @@
 						<p><b>Duration:</b> Sep, 2019 to Jan, 2020</p>
         				</div>
         			</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education slides_theme">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
         				<div class="feature_item">
         					<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
@@ -263,7 +263,7 @@
 						<p><b>Passing Year:</b> Ongoing</p>
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education slides_theme">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
         				<div class="feature_item">
 						<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
@@ -275,7 +275,7 @@
 						<p><b>Passing Year:</b> 2020</p>
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education slides_theme">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
         				<div class="feature_item">
 						<i class="flaticon-professor"></i>
         					<h4>B.Sc. Engg.</h4>
@@ -287,7 +287,7 @@
 						<p><b>Passing Year:</b> 2018</p>
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education slides_theme">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
         				<div class="feature_item">
 						<i class="flaticon-school"></i>
 						<p><b>Ispahani Public School & College</b></p>
@@ -298,7 +298,7 @@
 
         				</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 education slides_theme">
+				<div class="col-lg-4 col-md-4 col-sm-6 education slider_theme">
         				<div class="feature_item">
 						<i class="flaticon-student"></i>
         					<h4>SSC</h4>
